--- a/src/lab/FloatingPointNumbers/Introduction.html
+++ b/src/lab/FloatingPointNumbers/Introduction.html
@@ -28,6 +28,57 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="../css/style.css" rel="stylesheet"/>
 	<script src="tabs.js" type="text/javascript"></script>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67020197-1', 'auto');ga('send', 'pageview');</script>	
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+	{
+		box-sizing: border-box;
+	}
+	.search-form{
+		
+		float:right;
+		
+	}
+
+	input[type=text]{
+		padding: 6px;
+		margin-top: 8px;
+		font-size: 17px;
+		border: none;
+	}
+
+
+	.search-form button{
+		float: right;
+		padding: 6px 10px;
+		margin-top: 8px;
+		margin-right: 16px;
+		background: #46ce54;
+		font-size: 17px;
+		border: none;
+		cursor: pointer;
+	} 
+
+	@media screen and (max-width: 600px) {
+	  .search-form {
+	    float: none;
+	  }
+	  a, input[type=text], .search-form button {
+	    float: none;
+	    display: block;
+	    text-align: left;
+	    width: 100%;
+	    margin: 0;
+	    padding: 14px;
+	    border: 1px solid green;
+
+	  }
+	  input[type=text] {
+	    border: 1px solid green;  
+	  }
+
+	}
+</style>
+
 </head>
 <body class="index" id="page-top"><!--Google Tag Manager (noscript)--><noscript class="gtm"><iframe height="0" src="https://www.googletagmanager.com/ns.html?id=GTM-W59SWTR" style="display:none;visibility:hidden" width="0"></iframe></noscript><!--End Google Tag Manager (noscript)-->
 <div id="top">
@@ -48,6 +99,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			                        
 			            <!-- Collect the nav links, forms, and other content for toggling -->
 			            <div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
+
+			            	<form class="search-form">
+			            		<input type="text" placeholder="SEARCH FOR A LAB" style="background-color:#d0d3d4; color: #454545">
+			            		<button type="submit"><i class="fa fa-search"></i></button>
+			            	</form>
 			               
 			               <!--  <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
 			                	<li>
